@@ -2,22 +2,24 @@ package legend.game.inventory.screens;
 
 import legend.core.MathHelper;
 import legend.core.memory.Method;
-import legend.game.input.InputAction;
+import legend.core.platform.input.InputAction;
+import legend.core.platform.input.InputMod;
+import legend.game.i18n.I18n;
 import legend.game.inventory.EquipItemResult;
 import legend.game.inventory.Equipment;
 import legend.game.inventory.InventoryEntry;
 import legend.game.inventory.Item;
+import legend.game.inventory.ItemIcon;
 import legend.game.inventory.WhichMenu;
 import legend.game.modding.coremod.CoreMod;
-import legend.game.modding.events.inventory.ShopEquipmentEvent;
-import legend.game.modding.events.inventory.ShopItemEvent;
+import legend.game.modding.events.inventory.ShopContentsEvent;
 import legend.game.modding.events.inventory.ShopSellPriceEvent;
 import legend.game.types.ActiveStatsa0;
 import legend.game.types.EquipmentSlot;
 import legend.game.types.MessageBoxResult;
 import legend.game.types.Renderable58;
+import legend.game.types.Shop;
 import legend.lodmod.LodMod;
-import org.legendofdragoon.modloader.registries.RegistryId;
 
 import javax.annotation.Nullable;
 import java.util.ArrayList;
@@ -25,11 +27,16 @@ import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 
 import static legend.core.GameEngine.CONFIG;
 import static legend.core.GameEngine.EVENTS;
 import static legend.core.GameEngine.REGISTRIES;
 import static legend.game.SItem.FUN_80104b60;
+import static legend.game.SItem.UI_TEXT;
+import static legend.game.SItem.UI_TEXT_CENTERED;
+import static legend.game.SItem.UI_TEXT_DISABLED;
+import static legend.game.SItem.UI_TEXT_SELECTED_CENTERED;
 import static legend.game.SItem.allocateOneFrameGlyph;
 import static legend.game.SItem.allocateUiElement;
 import static legend.game.SItem.cacheCharacterSlots;
@@ -41,16 +48,14 @@ import static legend.game.SItem.glyphs_80114510;
 import static legend.game.SItem.initGlyph;
 import static legend.game.SItem.loadCharacterStats;
 import static legend.game.SItem.menuStack;
-import static legend.game.SItem.renderCentredText;
 import static legend.game.SItem.renderEightDigitNumber;
 import static legend.game.SItem.renderFiveDigitNumber;
+import static legend.game.SItem.renderFraction;
 import static legend.game.SItem.renderGlyphs;
 import static legend.game.SItem.renderItemIcon;
 import static legend.game.SItem.renderString;
-import static legend.game.SItem.renderText;
 import static legend.game.SItem.renderThreeDigitNumber;
 import static legend.game.SItem.renderThreeDigitNumberComparison;
-import static legend.game.SItem.renderTwoDigitNumber;
 import static legend.game.Scus94491BpeSegment.startFadeEffect;
 import static legend.game.Scus94491BpeSegment_8002.addGold;
 import static legend.game.Scus94491BpeSegment_8002.allocateRenderable;
@@ -58,19 +63,29 @@ import static legend.game.Scus94491BpeSegment_8002.deallocateRenderables;
 import static legend.game.Scus94491BpeSegment_8002.giveEquipment;
 import static legend.game.Scus94491BpeSegment_8002.giveItem;
 import static legend.game.Scus94491BpeSegment_8002.playMenuSound;
+import static legend.game.Scus94491BpeSegment_8002.renderText;
 import static legend.game.Scus94491BpeSegment_8002.takeEquipment;
 import static legend.game.Scus94491BpeSegment_8002.takeItem;
 import static legend.game.Scus94491BpeSegment_8002.unloadRenderable;
-import static legend.game.Scus94491BpeSegment_8004.engineState_8004dd04;
 import static legend.game.Scus94491BpeSegment_8007.shopId_8007a3b4;
 import static legend.game.Scus94491BpeSegment_800b.characterIndices_800bdbb8;
 import static legend.game.Scus94491BpeSegment_800b.fullScreenEffect_800bb140;
 import static legend.game.Scus94491BpeSegment_800b.gameState_800babc8;
 import static legend.game.Scus94491BpeSegment_800b.stats_800be5f8;
-import static legend.game.Scus94491BpeSegment_800b.textZ_800bdf00;
 import static legend.game.Scus94491BpeSegment_800b.uiFile_800bdc3c;
 import static legend.game.Scus94491BpeSegment_800b.whichMenu_800bdc38;
-import static legend.game.submap.SMap.shops_800f4930;
+import static legend.game.modding.coremod.CoreMod.INPUT_ACTION_MENU_BACK;
+import static legend.game.modding.coremod.CoreMod.INPUT_ACTION_MENU_BOTTOM;
+import static legend.game.modding.coremod.CoreMod.INPUT_ACTION_MENU_CONFIRM;
+import static legend.game.modding.coremod.CoreMod.INPUT_ACTION_MENU_DOWN;
+import static legend.game.modding.coremod.CoreMod.INPUT_ACTION_MENU_END;
+import static legend.game.modding.coremod.CoreMod.INPUT_ACTION_MENU_HOME;
+import static legend.game.modding.coremod.CoreMod.INPUT_ACTION_MENU_LEFT;
+import static legend.game.modding.coremod.CoreMod.INPUT_ACTION_MENU_PAGE_DOWN;
+import static legend.game.modding.coremod.CoreMod.INPUT_ACTION_MENU_PAGE_UP;
+import static legend.game.modding.coremod.CoreMod.INPUT_ACTION_MENU_RIGHT;
+import static legend.game.modding.coremod.CoreMod.INPUT_ACTION_MENU_TOP;
+import static legend.game.modding.coremod.CoreMod.INPUT_ACTION_MENU_UP;
 
 public class ShopScreen extends MenuScreen {
   private static final String Not_enough_money_8011c468 = "Not enough\nmoney";
@@ -86,10 +101,13 @@ public class ShopScreen extends MenuScreen {
   private MenuState menuState = MenuState.INIT_0;
   private MenuState confirmDest;
 
+  /** Allows list wrapping, but only on new input */
+  private boolean allowWrapY = true;
+
   private int equipCharIndex;
   private int menuIndex_8011e0dc;
-  private int menuIndex_8011e0e0;
-  private int menuScroll_8011e0e4;
+  private int invIndex_8011e0e0;
+  private int invScroll_8011e0e4;
   private Renderable58 renderable_8011e0f0;
   private Renderable58 renderable_8011e0f4;
   private Renderable58 selectedMenuOptionRenderablePtr_800bdbe0;
@@ -100,18 +118,11 @@ public class ShopScreen extends MenuScreen {
 
   /**
    * <ul>
-   *   <li>0 - Item Shop</li>
-   *   <li>1 - Weapon Shop</li>
+   *   <li>0 - Weapon Shop</li>
+   *   <li>1 - Item Shop</li>
    * </ul>
    */
-  private int shopType;
-  /**
-   * <ul>
-   *   <li>0 - Item Shop</li>
-   *   <li>1 - Weapon Shop</li>
-   * </ul>
-   */
-  private int shopType2;
+  private int sellType;
 
   private final Renderable58[] charRenderables = new Renderable58[9];
 
@@ -126,51 +137,25 @@ public class ShopScreen extends MenuScreen {
         this.inv.clear();
         loadCharacterStats();
         this.menuIndex_8011e0dc = 0;
-        this.menuIndex_8011e0e0 = 0;
-        this.menuScroll_8011e0e4 = 0;
+        this.invIndex_8011e0e0 = 0;
+        this.invScroll_8011e0e4 = 0;
         this.menuState = MenuState.LOAD_ITEMS_1;
       }
 
       case LOAD_ITEMS_1 -> {
-        if(uiFile_800bdc3c == null) {
-          return;
-        }
-
         startFadeEffect(2, 10);
 
-        this.shopType = shops_800f4930[shopId_8007a3b4].shopType_00 & 1;
+        final Shop shop = REGISTRIES.shop.getEntry(LodMod.id(LodMod.SHOP_IDS[shopId_8007a3b4])).get();
 
-        if(this.shopType == 0) {
-          final List<ShopEntry<Equipment>> shopEntries = new ArrayList<>();
+        final List<ShopEntry<InventoryEntry>> shopEntries = new ArrayList<>();
 
-          for(int i = 0; i < 16; i++) {
-            final int id = shops_800f4930[shopId_8007a3b4].item_00[i];
-
-            if(id != 0xff) {
-              final RegistryId registryId = LodMod.equipmentIdMap.get(id);
-              final Equipment equipment = REGISTRIES.equipment.getEntry(registryId).get();
-              shopEntries.add(new ShopEntry<>(equipment, equipment.getPrice() * 2));
-            }
-          }
-
-          final ShopEquipmentEvent event = EVENTS.postEvent(new ShopEquipmentEvent(shopId_8007a3b4, shopEntries));
-          this.inv.addAll(event.equipment);
-        } else {
-          final List<ShopEntry<Item>> shopEntries = new ArrayList<>();
-
-          for(int i = 0; i < 16; i++) {
-            final int id = shops_800f4930[shopId_8007a3b4].item_00[i];
-
-            if(id != 0xff) {
-              final RegistryId registryId = LodMod.itemIdMap.get(id - 192);
-              final Item item = REGISTRIES.items.getEntry(registryId).get();
-              shopEntries.add(new ShopEntry<>(item, item.getPrice() * 2));
-            }
-          }
-
-          final ShopItemEvent event = EVENTS.postEvent(new ShopItemEvent(shopId_8007a3b4, shopEntries));
-          this.inv.addAll(event.items);
+        for(int i = 0; i < shop.getInventoryCount(); i++) {
+          final InventoryEntry entry = shop.getItem(i);
+          shopEntries.add(new ShopEntry<>(entry, entry.getPrice() * 2));
         }
+
+        final ShopContentsEvent event = EVENTS.postEvent(new ShopContentsEvent(shop, shopEntries));
+        this.inv.addAll(event.contents);
 
         cacheCharacterSlots();
 
@@ -187,101 +172,120 @@ public class ShopScreen extends MenuScreen {
           this.charRenderables[charSlot] = this.allocateCharRenderable(this.FUN_8010a818(charSlot), 174, characterIndices_800bdbb8[charSlot]);
         }
 
-        this.renderShopMenu(this.menuIndex_8011e0dc, this.shopType);
+        this.renderShopMenu(this.menuIndex_8011e0dc);
+
+        if(!this.inv.isEmpty()) {
+          this.renderShopTypeInfo(this.inv.getFirst().item instanceof Item);
+        }
+
         this.menuState = MenuState.RENDER_3;
       }
 
-      case RENDER_3 -> this.renderShopMenu(this.menuIndex_8011e0dc, this.shopType);
+      case RENDER_3 -> {
+        this.renderShopMenu(this.menuIndex_8011e0dc);
+
+        if(!this.inv.isEmpty()) {
+          this.renderShopTypeInfo(this.inv.getFirst().item instanceof Item);
+        }
+      }
 
       case BUY_4 -> {
-        final ShopEntry<? extends InventoryEntry> entry = this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0);
+        final ShopEntry<? extends InventoryEntry> entry = this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0);
 
-        if(this.shopType == 0) {
+        if(entry.item instanceof Equipment) {
           this.renderEquipmentStatChange((Equipment)entry.item, characterIndices_800bdbb8[this.equipCharIndex]);
         } else {
           this.renderNumberOfItems((Item)entry.item);
         }
 
-        renderString(16, 122, entry.item.getDescription(), false);
+        renderString(16, 122, I18n.translate(entry.item.getDescriptionTranslationKey()), false);
 
         if(this.scrollAccumulator >= 1.0d) {
           this.scrollAccumulator -= 1.0d;
 
-          if(this.menuScroll_8011e0e4 > 0 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
-            this.scroll(this.menuScroll_8011e0e4 - 1);
+          if(this.invScroll_8011e0e4 > 0 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
+            this.scroll(this.invScroll_8011e0e4 - 1);
+          }
+
+          if(entry.item instanceof Equipment) {
+            this.FUN_8010a864((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item);
           }
         }
 
         if(this.scrollAccumulator <= -1.0d) {
           this.scrollAccumulator += 1.0d;
 
-          if(this.menuScroll_8011e0e4 < this.inv.size() - 6 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
-            this.scroll(this.menuScroll_8011e0e4 + 1);
+          if(this.invScroll_8011e0e4 < this.inv.size() - 6 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
+            this.scroll(this.invScroll_8011e0e4 + 1);
+          }
+
+          if(entry.item instanceof Equipment) {
+            this.FUN_8010a864((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item);
           }
         }
 
-        this.renderMenuEntries(this.inv, this.menuScroll_8011e0e4, this.renderable_8011e0f0, this.renderable_8011e0f4);
-        this.renderShopMenu(this.menuIndex_8011e0dc, this.shopType);
+        this.renderMenuEntries(this.inv, this.invScroll_8011e0e4, this.renderable_8011e0f0, this.renderable_8011e0f4);
+        this.renderShopMenu(this.menuIndex_8011e0dc);
       }
 
       case BUY_SELECT_CHAR_5 -> {
-        final ShopEntry<? extends InventoryEntry> equipment = this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0);
+        final ShopEntry<? extends InventoryEntry> equipment = this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0);
         this.renderEquipmentStatChange((Equipment)equipment.item, characterIndices_800bdbb8[this.equipCharIndex]);
-        renderString(16, 122, equipment.item.getDescription(), false);
-        this.renderMenuEntries(this.inv, this.menuScroll_8011e0e4, this.renderable_8011e0f0, this.renderable_8011e0f4);
-        this.renderShopMenu(this.menuIndex_8011e0dc, this.shopType);
+        renderString(16, 122, I18n.translate(equipment.item.getDescriptionTranslationKey()), false);
+        this.renderMenuEntries(this.inv, this.invScroll_8011e0e4, this.renderable_8011e0f0, this.renderable_8011e0f4);
+        this.renderShopMenu(this.menuIndex_8011e0dc);
       }
 
       case SELL_10 -> {
         final int count;
-        if(this.shopType2 != 0) {
-          renderText(Which_item_do_you_want_to_sell_8011c4e4, 16, 128, TextColour.BROWN);
+        if(this.sellType != 0) {
+          renderText(Which_item_do_you_want_to_sell_8011c4e4, 16, 128, UI_TEXT);
           count = gameState_800babc8.items_2e9.size();
 
-          if(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0 < count) {
-            renderString(193, 122, gameState_800babc8.items_2e9.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).getDescription(), false);
+          if(this.invScroll_8011e0e4 + this.invIndex_8011e0e0 < count) {
+            renderString(193, 122, I18n.translate(gameState_800babc8.items_2e9.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).getDescriptionTranslationKey()), false);
           }
         } else {
-          renderText(Which_weapon_do_you_want_to_sell_8011c524, 16, 128, TextColour.BROWN);
+          renderText(Which_weapon_do_you_want_to_sell_8011c524, 16, 128, UI_TEXT);
           count = gameState_800babc8.equipment_1e8.size();
 
-          if(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0 < count) {
-            renderString(193, 122, gameState_800babc8.equipment_1e8.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).description, false);
+          if(this.invScroll_8011e0e4 + this.invIndex_8011e0e0 < count) {
+            renderString(193, 122, I18n.translate(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).getDescriptionTranslationKey()), false);
           }
         }
 
         if(this.scrollAccumulator >= 1.0d) {
           this.scrollAccumulator -= 1.0d;
 
-          if(this.menuScroll_8011e0e4 > 0 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
+          if(this.invScroll_8011e0e4 > 0 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
             playMenuSound(1);
-            this.menuScroll_8011e0e4--;
+            this.invScroll_8011e0e4--;
 
-            if(this.shopType2 == 0) {
-              this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0));
+            if(this.sellType == 0) {
+              this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
             }
 
-            this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+            this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
           }
         }
 
         if(this.scrollAccumulator <= -1.0d) {
           this.scrollAccumulator += 1.0d;
 
-          if(this.menuScroll_8011e0e4 < count - 6 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
+          if(this.invScroll_8011e0e4 < count - 6 && MathHelper.inBox(this.mouseX, this.mouseY, 138, 16, 220, 104)) {
             playMenuSound(1);
-            this.menuScroll_8011e0e4++;
+            this.invScroll_8011e0e4++;
 
-            if(this.shopType2 == 0) {
-              this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0));
+            if(this.sellType == 0) {
+              this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
             }
 
-            this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+            this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
           }
         }
 
-        this.renderItemList(this.menuScroll_8011e0e4, this.shopType2, this.renderable_8011e0f0, this.renderable_8011e0f4);
-        this.renderShopMenu(this.menuIndex_8011e0dc, this.shopType2);
+        this.renderSellList(this.invScroll_8011e0e4, this.sellType == 1, this.renderable_8011e0f0, this.renderable_8011e0f4);
+        this.renderShopMenu(this.menuIndex_8011e0dc);
       }
 
       case _16, _17 -> {
@@ -294,23 +298,17 @@ public class ShopScreen extends MenuScreen {
           this.menuState = this.confirmDest;
         }
 
-        this.renderShopMenu(this.menuIndex_8011e0dc, this.shopType);
+        this.renderShopMenu(this.menuIndex_8011e0dc);
+        this.renderShopTypeInfo(this.inv.isEmpty() || this.inv.getFirst().item instanceof Item);
       }
 
-      case UNLOAD_19 -> {
-        startFadeEffect(2, 10);
-        deallocateRenderables(0xff);
-
-        engineState_8004dd04.menuClosed();
-
-        whichMenu_800bdc38 = WhichMenu.UNLOAD_SHOP_MENU_10;
-        textZ_800bdf00 = 13;
-      }
+      case UNLOAD_19 -> whichMenu_800bdc38 = WhichMenu.UNLOAD;
     }
   }
 
   private void scroll(final int scroll) {
-    this.menuScroll_8011e0e4 = scroll;
+    playMenuSound(1);
+    this.invScroll_8011e0e4 = scroll;
   }
 
   private int FUN_8010a864(@Nullable final Equipment equipment) {
@@ -337,23 +335,30 @@ public class ShopScreen extends MenuScreen {
     return s3;
   }
 
-  private void renderShopMenu(final int selectedMenuItem, final int isItemMenu) {
-    renderCentredText(Buy_8011c6a4, 72, this.getShopMenuYOffset(0) + 2, selectedMenuItem != 0 ? TextColour.BROWN : TextColour.RED);
-    renderCentredText(Sell_8011c6ac, 72, this.getShopMenuYOffset(1) + 2, selectedMenuItem != 1 ? TextColour.BROWN : TextColour.RED);
-    renderCentredText(Carried_8011c6b8, 72, this.getShopMenuYOffset(2) + 2, selectedMenuItem != 2 ? TextColour.BROWN : TextColour.RED);
-    renderCentredText(Leave_8011c6c8, 72, this.getShopMenuYOffset(3) + 2, selectedMenuItem != 3 ? TextColour.BROWN : TextColour.RED);
+  private void renderShopMenu(final int selectedMenuItem) {
+    renderText(Buy_8011c6a4, 72, this.getShopMenuYOffset(0) + 2, selectedMenuItem != 0 ? UI_TEXT_CENTERED : UI_TEXT_SELECTED_CENTERED);
+    renderText(Sell_8011c6ac, 72, this.getShopMenuYOffset(1) + 2, selectedMenuItem != 1 ? UI_TEXT_CENTERED : UI_TEXT_SELECTED_CENTERED);
+    renderText(Carried_8011c6b8, 72, this.getShopMenuYOffset(2) + 2, selectedMenuItem != 2 ? UI_TEXT_CENTERED : UI_TEXT_SELECTED_CENTERED);
+    renderText(Leave_8011c6c8, 72, this.getShopMenuYOffset(3) + 2, selectedMenuItem != 3 ? UI_TEXT_CENTERED : UI_TEXT_SELECTED_CENTERED);
+  }
 
-    if(isItemMenu != 0) {
-      renderTwoDigitNumber(105, 36, gameState_800babc8.items_2e9.size(), 0x2);
-      allocateOneFrameGlyph(94, 16, 16);
-      renderTwoDigitNumber(123, 36, CONFIG.getConfig(CoreMod.INVENTORY_SIZE_CONFIG.get()), 0x2);
+  private void renderShopTypeInfo(final boolean useItemShop) {
+    final int size;
+    final int current;
+    if(useItemShop) {
+      size = CONFIG.getConfig(CoreMod.INVENTORY_SIZE_CONFIG.get());
+      current = gameState_800babc8.items_2e9.size();
+      final Renderable58 renderable = allocateOneFrameGlyph(94, 16, 16);
+      renderable.metricsCount = 18; // truncate slash from renderable
     } else {
-      renderThreeDigitNumber(93, 36, gameState_800babc8.equipment_1e8.size(), 0x2);
-      allocateOneFrameGlyph(95, 16, 16);
-      renderThreeDigitNumber(117, 36, 255, 0x2);
+      size = 255;
+      current = gameState_800babc8.equipment_1e8.size();
+      final Renderable58 renderable = allocateOneFrameGlyph(95, 16, 16);
+      renderable.metricsCount = 18; // truncate slash from renderable
     }
 
     renderEightDigitNumber(87, 24, gameState_800babc8.gold_94, 0x2);
+    renderFraction(135, 36, current, size);
   }
 
   private void renderEquipmentStatChange(final Equipment equipment, final int charIndex) {
@@ -382,7 +387,7 @@ public class ShopScreen extends MenuScreen {
         renderThreeDigitNumberComparison(284, 147, oldStats.equipmentMagicAttack_8a, newStats.equipmentMagicAttack_8a);
         renderThreeDigitNumberComparison(284, 157, oldStats.equipmentMagicDefence_8e, newStats.equipmentMagicDefence_8e);
       } else {
-        renderText(Cannot_be_armed_with_8011c6d4, 228, 137, TextColour.BROWN);
+        renderText(Cannot_be_armed_with_8011c6d4, 228, 137, UI_TEXT);
       }
 
       gameState_800babc8.charData_32c[charIndex].equipment_14.clear();
@@ -399,16 +404,16 @@ public class ShopScreen extends MenuScreen {
         count++;
       }
     }
-    renderText(Number_kept_8011c7f4 + count, 195, 125, TextColour.BROWN);
+    renderText(Number_kept_8011c7f4 + count, 195, 125, UI_TEXT);
   }
 
-  private void renderItemList(final int firstItem, final int isItemMenu, final Renderable58 upArrow, final Renderable58 downArrow) {
-    if(isItemMenu != 0) {
+  private void renderSellList(final int firstItem, final boolean isItemShop, final Renderable58 upArrow, final Renderable58 downArrow) {
+    if(isItemShop) {
       int i;
       for(i = 0; firstItem + i < gameState_800babc8.items_2e9.size() && i < 6; i++) {
         final Item item = gameState_800babc8.items_2e9.get(firstItem + i);
         renderItemIcon(item.getIcon(), 151, this.menuEntryY(i), 0x8);
-        renderText(item.getName(), 168, this.menuEntryY(i) + 2, TextColour.BROWN);
+        renderText(I18n.translate(item), 168, this.menuEntryY(i) + 2, UI_TEXT);
 
         final ShopSellPriceEvent event = EVENTS.postEvent(new ShopSellPriceEvent(shopId_8007a3b4, item, item.getPrice()));
         this.FUN_801069d0(324, this.menuEntryY(i) + 4, event.price);
@@ -420,13 +425,13 @@ public class ShopScreen extends MenuScreen {
       for(i = 0; firstItem + i < gameState_800babc8.equipment_1e8.size() && i < 6; i++) {
         final Equipment equipment = gameState_800babc8.equipment_1e8.get(firstItem + i);
         renderItemIcon(equipment.icon_0e, 151, this.menuEntryY(i), 0x8);
-        renderText(equipment.name, 168, this.menuEntryY(i) + 2, equipment.canBeDiscarded() ? TextColour.BROWN : TextColour.MIDDLE_BROWN);
+        renderText(I18n.translate(equipment), 168, this.menuEntryY(i) + 2, equipment.canBeDiscarded() ? UI_TEXT : UI_TEXT_DISABLED);
 
         if(equipment.canBeDiscarded()) {
           final ShopSellPriceEvent event = EVENTS.postEvent(new ShopSellPriceEvent(shopId_8007a3b4, equipment, equipment.getPrice()));
           renderFiveDigitNumber(322, this.menuEntryY(i) + 4, event.price);
         } else {
-          renderItemIcon(58, 330, this.menuEntryY(i), 0x8).clut_30 = 0x7eaa;
+          renderItemIcon(ItemIcon.WARNING, 330, this.menuEntryY(i), 0x8).clut_30 = 0x7eaa;
         }
       }
 
@@ -434,19 +439,23 @@ public class ShopScreen extends MenuScreen {
     }
 
     upArrow.setVisible(firstItem != 0);
+
+    this.renderShopTypeInfo(isItemShop);
   }
 
   private void renderMenuEntries(final List<ShopEntry<? extends InventoryEntry>> list, final int startItemIndex, final Renderable58 upArrow, final Renderable58 downArrow) {
     int i;
     for(i = 0; i < Math.min(6, list.size() - startItemIndex); i++) {
       final ShopEntry<? extends InventoryEntry> item = list.get(startItemIndex + i);
-      renderText(item.item.getName(), 168, this.menuEntryY(i) + 2, TextColour.BROWN);
+      renderText(I18n.translate(item.item.getNameTranslationKey()), 168, this.menuEntryY(i) + 2, UI_TEXT);
       renderFiveDigitNumber(324, this.menuEntryY(i) + 4, item.price);
       renderItemIcon(item.item.getIcon(), 151, this.menuEntryY(i), 0x8);
     }
 
     upArrow.setVisible(startItemIndex != 0);
     downArrow.setVisible(i + startItemIndex < list.size());
+
+    this.renderShopTypeInfo(list.get(startItemIndex + this.invIndex_8011e0e0).item instanceof Item);
   }
 
   private Renderable58 allocateCharRenderable(final int x, final int y, final int glyph) {
@@ -503,21 +512,21 @@ public class ShopScreen extends MenuScreen {
           playMenuSound(1);
           this.menuIndex_8011e0dc = i;
 
-          this.menuScroll_8011e0e4 = 0;
-          this.menuIndex_8011e0e0 = 0;
+          this.invScroll_8011e0e4 = 0;
+          this.invIndex_8011e0e0 = 0;
           this.selectedMenuOptionRenderablePtr_800bdbe0.y_44 = this.getShopMenuYOffset(i);
           return InputPropagation.HANDLED;
         }
       }
     } else if(this.menuState == MenuState.BUY_4) {
-      for(int i = 0; i < Math.min(6, this.inv.size() - this.menuScroll_8011e0e4); i++) {
-        if(this.menuIndex_8011e0e0 != i && MathHelper.inBox(this.mouseX, this.mouseY, 138, this.menuEntryY(i) - 2, 220, 17)) {
+      for(int i = 0; i < Math.min(6, this.inv.size() - this.invScroll_8011e0e4); i++) {
+        if(this.invIndex_8011e0e0 != i && MathHelper.inBox(this.mouseX, this.mouseY, 138, this.menuEntryY(i) - 2, 220, 17)) {
           playMenuSound(1);
-          this.menuIndex_8011e0e0 = i;
+          this.invIndex_8011e0e0 = i;
           this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(i);
 
-          if(this.shopType == 0) {
-            this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + i).item);
+          if(this.inv.get(this.invScroll_8011e0e4 + i).item instanceof final Equipment equipment) {
+            this.equipCharIndex = this.FUN_8010a864(equipment);
           }
 
           return InputPropagation.HANDLED;
@@ -533,13 +542,18 @@ public class ShopScreen extends MenuScreen {
         }
       }
     } else if(this.menuState == MenuState.SELL_10) {
-      final int count = this.shopType2 != 0 ? gameState_800babc8.items_2e9.size() : gameState_800babc8.equipment_1e8.size();
+      final int count = this.sellType != 0 ? gameState_800babc8.items_2e9.size() : gameState_800babc8.equipment_1e8.size();
 
       for(int i = 0; i < Math.min(count, 6); i++) {
-        if(this.menuIndex_8011e0e0 != i && MathHelper.inBox(this.mouseX, this.mouseY, 138, this.menuEntryY(i), 220, 17)) {
+        if(this.invIndex_8011e0e0 != i && MathHelper.inBox(this.mouseX, this.mouseY, 138, this.menuEntryY(i), 220, 17)) {
           playMenuSound(1);
-          this.menuIndex_8011e0e0 = i;
+          this.invIndex_8011e0e0 = i;
           this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(i);
+
+          if(this.sellType == 0) {
+            this.equipCharIndex = this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + i));
+          }
+
           return InputPropagation.HANDLED;
         }
       }
@@ -549,7 +563,7 @@ public class ShopScreen extends MenuScreen {
   }
 
   @Override
-  protected InputPropagation mouseClick(final int x, final int y, final int button, final int mods) {
+  protected InputPropagation mouseClick(final int x, final int y, final int button, final Set<InputMod> mods) {
     if(super.mouseClick(x, y, button, mods) == InputPropagation.HANDLED) {
       return InputPropagation.HANDLED;
     }
@@ -560,8 +574,8 @@ public class ShopScreen extends MenuScreen {
           playMenuSound(2);
           this.menuIndex_8011e0dc = i;
 
-          this.menuScroll_8011e0e4 = 0;
-          this.menuIndex_8011e0e0 = 0;
+          this.invScroll_8011e0e4 = 0;
+          this.invIndex_8011e0e0 = 0;
           this.selectedMenuOptionRenderablePtr_800bdbe0.y_44 = this.getShopMenuYOffset(i);
 
           this.handleSelectedMenu(i);
@@ -569,20 +583,16 @@ public class ShopScreen extends MenuScreen {
         }
       }
     } else if(this.menuState == MenuState.BUY_4) {
-      for(int i = 0; i < Math.min(6, this.inv.size() - this.menuScroll_8011e0e4); i++) {
+      for(int i = 0; i < Math.min(6, this.inv.size() - this.invScroll_8011e0e4); i++) {
         if(MathHelper.inBox(this.mouseX, this.mouseY, 138, this.menuEntryY(i) - 2, 220, 17)) {
           playMenuSound(2);
-          this.menuIndex_8011e0e0 = i;
+          this.invIndex_8011e0e0 = i;
           this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(i);
 
-          if(this.shopType == 0) {
-            this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + i).item);
-          }
-
-          playMenuSound(2);
-
+          final ShopEntry<? extends InventoryEntry> inv = this.inv.get(this.invScroll_8011e0e4 + i);
           final boolean hasSpace;
-          if(this.shopType == 0) {
+          if(inv.item instanceof final Equipment equipment) {
+            this.equipCharIndex = this.FUN_8010a864(equipment);
             hasSpace = gameState_800babc8.equipment_1e8.size() < 255;
           } else {
             hasSpace = gameState_800babc8.items_2e9.size() < CONFIG.getConfig(CoreMod.INVENTORY_SIZE_CONFIG.get());
@@ -590,14 +600,17 @@ public class ShopScreen extends MenuScreen {
 
           if(!hasSpace) {
             menuStack.pushScreen(new MessageBoxScreen("Cannot carry any more", 0, result -> { }));
-          } else if(gameState_800babc8.gold_94 < this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).price) {
+          } else if(gameState_800babc8.gold_94 < inv.price) {
             menuStack.pushScreen(new MessageBoxScreen(Not_enough_money_8011c468, 0, result -> { }));
           } else {
-            if(this.shopType != 0) {
+            if(inv.item instanceof final Item item) {
               menuStack.pushScreen(new MessageBoxScreen("Buy item?", 2, result -> {
                 if(result == MessageBoxResult.YES) {
-                  gameState_800babc8.gold_94 -= this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).price;
-                  giveItem((Item)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+                  if(giveItem(item)) {
+                    gameState_800babc8.gold_94 -= inv.price;
+                  } else {
+                    menuStack.pushScreen(new MessageBoxScreen("Cannot carry any more", 0, onResult -> { }));
+                  }
                 }
               }));
             } else {
@@ -619,23 +632,38 @@ public class ShopScreen extends MenuScreen {
 
           menuStack.pushScreen(new MessageBoxScreen("Buy item?", 2, result -> {
             if(result == MessageBoxResult.YES) {
-              gameState_800babc8.gold_94 -= this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).price;
+              if(canEquip((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex])) {
+                menuStack.pushScreen(new MessageBoxScreen("Equip item?", 2, result1 -> {
+                  if(result1 == MessageBoxResult.YES) {
+                    final EquipItemResult equipResult = equipItem((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex]);
 
-              menuStack.pushScreen(new MessageBoxScreen("Equip item?", 2, result1 -> {
-                if(result1 == MessageBoxResult.YES && canEquip((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex])) {
-                  final EquipItemResult equipResult = equipItem((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex]);
-
-                  if(equipResult.previousEquipment != null) {
-                    giveEquipment(equipResult.previousEquipment);
+                    if(equipResult.previousEquipment != null) {
+                      if(equipResult.success) {
+                        if(giveEquipment(equipResult.previousEquipment)) {
+                          gameState_800babc8.gold_94 -= this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).price;
+                        } else {
+                          equipItem(equipResult.previousEquipment, characterIndices_800bdbb8[this.equipCharIndex]);
+                          menuStack.pushScreen(new MessageBoxScreen("Cannot carry any more", 0, onResult -> {}));
+                        }
+                      } else {
+                        equipItem(equipResult.previousEquipment, characterIndices_800bdbb8[this.equipCharIndex]);
+                        menuStack.pushScreen(new MessageBoxScreen("Failed to equip new item", 0, onResult -> {}));
+                      }
+                    }
+                  } else {
+                    this.giveUnequipped(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
                   }
-                } else {
-                  giveEquipment((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
-                }
 
+                  this.menuState = MenuState.BUY_4;
+                  unloadRenderable(this.charHighlight);
+                  this.charHighlight = null;
+                }));
+              } else {
+                this.giveUnequipped(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
                 this.menuState = MenuState.BUY_4;
                 unloadRenderable(this.charHighlight);
                 this.charHighlight = null;
-              }));
+              }
             }
           }));
 
@@ -643,16 +671,15 @@ public class ShopScreen extends MenuScreen {
         }
       }
     } else if(this.menuState == MenuState.SELL_10) {
-      final int count = this.shopType2 != 0 ? gameState_800babc8.items_2e9.size() : gameState_800babc8.equipment_1e8.size();
+      final int count = this.sellType != 0 ? gameState_800babc8.items_2e9.size() : gameState_800babc8.equipment_1e8.size();
 
       for(int i = 0; i < Math.min(count, 6); i++) {
         if(MathHelper.inBox(this.mouseX, this.mouseY, 138, this.menuEntryY(i), 220, 17)) {
-          playMenuSound(2);
-          this.menuIndex_8011e0e0 = i;
+          this.invIndex_8011e0e0 = i;
           this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(i);
 
-          final int slot = this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0;
-          if(this.shopType2 != 0 && slot >= gameState_800babc8.items_2e9.size() || this.shopType2 == 0 && (slot >= gameState_800babc8.equipment_1e8.size() || !gameState_800babc8.equipment_1e8.get(slot).canBeDiscarded())) {
+          final int slot = this.invScroll_8011e0e4 + this.invIndex_8011e0e0;
+          if(this.sellType != 0 && slot >= gameState_800babc8.items_2e9.size() || this.sellType == 0 && (slot >= gameState_800babc8.equipment_1e8.size() || !gameState_800babc8.equipment_1e8.get(slot).canBeDiscarded())) {
             playMenuSound(40);
           } else {
             playMenuSound(2);
@@ -661,7 +688,7 @@ public class ShopScreen extends MenuScreen {
               if(Objects.requireNonNull(result) == MessageBoxResult.YES) {
                 final InventoryEntry inv;
                 final boolean success;
-                if(this.shopType2 != 0) {
+                if(this.sellType != 0) {
                   inv = gameState_800babc8.items_2e9.get(slot);
                   success = takeItem(slot);
                 } else {
@@ -673,13 +700,13 @@ public class ShopScreen extends MenuScreen {
                   final ShopSellPriceEvent event = EVENTS.postEvent(new ShopSellPriceEvent(shopId_8007a3b4, inv, inv.getPrice()));
                   addGold(event.price);
 
-                  if(this.menuScroll_8011e0e4 > 0 && this.menuScroll_8011e0e4 + 6 > count - 1) {
-                    this.menuScroll_8011e0e4--;
+                  if(this.invScroll_8011e0e4 > 0 && this.invScroll_8011e0e4 + 6 > count - 1) {
+                    this.invScroll_8011e0e4--;
                   }
 
-                  if(this.menuIndex_8011e0e0 != 0 && this.menuIndex_8011e0e0 > count - 2) {
-                    this.menuIndex_8011e0e0--;
-                    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+                  if(this.invIndex_8011e0e0 != 0 && this.invIndex_8011e0e0 > count - 2) {
+                    this.invIndex_8011e0e0--;
+                    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
                   }
                 }
               }
@@ -697,11 +724,16 @@ public class ShopScreen extends MenuScreen {
   protected void handleSelectedMenu(final int i) {
     switch(i) {
       case 0 -> { // Buy
-        this.selectedMenuOptionRenderablePtr_800bdbe4 = allocateUiElement(0x7b, 0x7b, 170, this.menuEntryY(this.menuIndex_8011e0e0));
+        if(this.inv.isEmpty()) {
+          menuStack.pushScreen(new MessageBoxScreen("This shop has nothing\nto buy", 0, result -> {}));
+          return;
+        }
+
+        this.selectedMenuOptionRenderablePtr_800bdbe4 = allocateUiElement(0x7b, 0x7b, 170, this.menuEntryY(this.invIndex_8011e0e0));
         FUN_80104b60(this.selectedMenuOptionRenderablePtr_800bdbe4);
 
-        if(this.shopType == 0) {
-          this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+        if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+          this.equipCharIndex = this.FUN_8010a864(equipment);
         }
 
         this.renderable_8011e0f0 = allocateUiElement(0x3d, 0x44, 358, this.menuEntryY(0));
@@ -713,9 +745,9 @@ public class ShopScreen extends MenuScreen {
         menuStack.pushScreen(new MessageBoxScreen("What do you want to sell?", "Armed", "Items", 2, result -> {
           switch(result) {
             case YES -> {
-              this.menuIndex_8011e0e0 = 0;
-              this.menuScroll_8011e0e4 = 0;
-              this.shopType2 = 0;
+              this.invIndex_8011e0e0 = 0;
+              this.invScroll_8011e0e4 = 0;
+              this.sellType = 0;
 
               if(!gameState_800babc8.equipment_1e8.isEmpty()) {
                 this.menuState = MenuState.SELL_10;
@@ -723,16 +755,16 @@ public class ShopScreen extends MenuScreen {
                 this.renderable_8011e0f0 = allocateUiElement(0x3d, 0x44, 358, this.menuEntryY(0));
                 this.renderable_8011e0f4 = allocateUiElement(0x35, 0x3c, 358, this.menuEntryY(5));
                 FUN_80104b60(this.selectedMenuOptionRenderablePtr_800bdbe4);
-                this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(0));
+                this.FUN_8010a864(gameState_800babc8.equipment_1e8.getFirst());
               } else {
                 menuStack.pushScreen(new MessageBoxScreen("You have no equipment\nto sell", 0, result1 -> {}));
               }
             }
 
             case NO -> {
-              this.shopType2 = 1;
-              this.menuScroll_8011e0e4 = 0;
-              this.menuIndex_8011e0e0 = 0;
+              this.sellType = 1;
+              this.invScroll_8011e0e4 = 0;
+              this.invIndex_8011e0e0 = 0;
 
               if(!gameState_800babc8.items_2e9.isEmpty()) {
                 this.menuState = MenuState.SELL_10;
@@ -789,26 +821,30 @@ public class ShopScreen extends MenuScreen {
   }
 
   private void menuMainShopRender3NavigateUp() {
-    playMenuSound(1);
-
     if(this.menuIndex_8011e0dc > 0) {
+      playMenuSound(1);
       this.menuIndex_8011e0dc--;
+    } else {
+      playMenuSound(1);
+      this.menuIndex_8011e0dc = 3;
     }
 
-    this.menuScroll_8011e0e4 = 0;
-    this.menuIndex_8011e0e0 = 0;
+    this.invScroll_8011e0e4 = 0;
+    this.invIndex_8011e0e0 = 0;
     this.selectedMenuOptionRenderablePtr_800bdbe0.y_44 = this.getShopMenuYOffset(this.menuIndex_8011e0dc);
   }
 
   private void menuMainShopRender3NavigateDown() {
-    playMenuSound(1);
-
     if(this.menuIndex_8011e0dc < 3) {
+      playMenuSound(1);
       this.menuIndex_8011e0dc++;
+    } else {
+      playMenuSound(1);
+      this.menuIndex_8011e0dc = 0;
     }
 
-    this.menuScroll_8011e0e4 = 0;
-    this.menuIndex_8011e0e0 = 0;
+    this.invScroll_8011e0e4 = 0;
+    this.invIndex_8011e0e0 = 0;
     this.selectedMenuOptionRenderablePtr_800bdbe0.y_44 = this.getShopMenuYOffset(this.menuIndex_8011e0dc);
   }
 
@@ -820,22 +856,27 @@ public class ShopScreen extends MenuScreen {
   private void menuBuy4Select() {
     playMenuSound(2);
 
+    final ShopEntry<? extends InventoryEntry> inv = this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0);
+
     final boolean hasSpace;
-    if(this.shopType == 0) {
+    if(inv.item instanceof Equipment) {
       hasSpace = gameState_800babc8.equipment_1e8.size() < 255;
     } else {
       hasSpace = gameState_800babc8.items_2e9.size() < CONFIG.getConfig(CoreMod.INVENTORY_SIZE_CONFIG.get());
     }
 
     if(!hasSpace) {
-      menuStack.pushScreen(new MessageBoxScreen("Cannot carry anymore", 0, result -> { }));
-    } else if(gameState_800babc8.gold_94 < this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).price) {
-      menuStack.pushScreen(new MessageBoxScreen(Not_enough_money_8011c468, 0, result -> { }));
-    } else if(this.shopType != 0) {
+      this.deferAction(() -> menuStack.pushScreen(new MessageBoxScreen("Cannot carry anymore", 0, result -> { })));
+    } else if(gameState_800babc8.gold_94 < inv.price) {
+      this.deferAction(() -> menuStack.pushScreen(new MessageBoxScreen(Not_enough_money_8011c468, 0, result -> { })));
+    } else if(inv.item instanceof final Item item) {
       menuStack.pushScreen(new MessageBoxScreen("Buy item?", 2, result -> {
         if(result == MessageBoxResult.YES) {
-          gameState_800babc8.gold_94 -= this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).price;
-          giveItem((Item)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+          if(giveItem(item)) {
+            gameState_800babc8.gold_94 -= inv.price;
+          } else {
+            this.deferAction(() -> menuStack.pushScreen(new MessageBoxScreen("Cannot carry any more", 0, onResult -> { })));
+          }
         }
       }));
     } else {
@@ -846,39 +887,129 @@ public class ShopScreen extends MenuScreen {
   }
 
   private void menuBuy4NavigateUp() {
-    playMenuSound(1);
-
-    if(this.menuIndex_8011e0e0 > 0) {
-      this.menuIndex_8011e0e0--;
-    } else if(this.menuScroll_8011e0e4 > 0) {
-      this.menuScroll_8011e0e4--;
+    final int invCount = this.inv.size();
+    if(this.invIndex_8011e0e0 > 0) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0--;
+    } else if(this.invScroll_8011e0e4 > 0) {
+      playMenuSound(1);
+      this.invScroll_8011e0e4--;
+    } else if(invCount > 1 && this.allowWrapY) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0 = invCount > 5 ? 5 : invCount - 1;
+      this.invScroll_8011e0e4 = invCount > 6 ? invCount - 6 : 0;
     }
 
-    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
 
-    if(this.shopType == 0) {
-      this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+    if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+      this.equipCharIndex = this.FUN_8010a864(equipment);
     }
   }
 
   private void menuBuy4NavigateDown() {
-    playMenuSound(1);
-
-    if(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0 >= this.inv.size()) {
-      playMenuSound(40);
-      return;
+    final int invCount = this.inv.size();
+    if(this.invScroll_8011e0e4 + this.invIndex_8011e0e0 < invCount - 1) {
+      playMenuSound(1);
+      if(this.invIndex_8011e0e0 < 5) {
+        this.invIndex_8011e0e0++;
+      } else {
+        this.invScroll_8011e0e4++;
+      }
+    } else if(invCount > 1 && this.allowWrapY) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0 = 0;
+      this.invScroll_8011e0e4 = 0;
     }
 
-    if(this.menuIndex_8011e0e0 < 5 && this.menuIndex_8011e0e0 < this.inv.size() - 1) {
-      this.menuIndex_8011e0e0++;
-    } else if((this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0) < this.inv.size() - 1) {
-      this.menuScroll_8011e0e4++;
+    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+
+    if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+      this.equipCharIndex = this.FUN_8010a864(equipment);
+    }
+  }
+
+  private void menuBuy4NavigateTop() {
+    if(this.invIndex_8011e0e0 != 0) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0 = 0;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+
+      if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+        this.equipCharIndex = this.FUN_8010a864(equipment);
+      }
+    }
+  }
+
+  private void menuBuy4NavigateBottom() {
+    if(this.invIndex_8011e0e0 != Math.min(5, this.inv.size() - 1)) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0 = Math.min(5, this.inv.size() - 1);
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+
+      if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+        this.equipCharIndex = this.FUN_8010a864(equipment);
+      }
+    }
+  }
+
+  private void menuBuy4NavigatePageUp() {
+    if(this.invScroll_8011e0e4 - 6 >= 0) {
+      playMenuSound(1);
+      this.invScroll_8011e0e4 -= 6;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+    } else if(this.invScroll_8011e0e4 != 0) {
+      playMenuSound(1);
+      this.invScroll_8011e0e4 = 0;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
     }
 
-    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+    if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+      this.equipCharIndex = this.FUN_8010a864(equipment);
+    }
+  }
 
-    if(this.shopType == 0) {
-      this.equipCharIndex = this.FUN_8010a864((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
+  private void menuBuy4NavigatePageDown() {
+    final int invCount = this.inv.size();
+    if((this.invScroll_8011e0e4 + this.invIndex_8011e0e0) + 6 < invCount - 7) {
+      playMenuSound(1);
+      this.invScroll_8011e0e4 += 6;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+    } else if(invCount > 6 && this.invScroll_8011e0e4 != invCount - 6) {
+      playMenuSound(1);
+      this.invScroll_8011e0e4 = invCount - 6;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+    }
+
+    if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+      this.equipCharIndex = this.FUN_8010a864(equipment);
+    }
+  }
+
+  private void menuBuy4NavigateHome() {
+    if(this.invIndex_8011e0e0 > 0 || this.invScroll_8011e0e4 > 0) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0 = 0;
+      this.invScroll_8011e0e4 = 0;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+
+      if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+        this.equipCharIndex = this.FUN_8010a864(equipment);
+      }
+    }
+  }
+
+  private void menuBuy4NavigateEnd() {
+    final int invCount = this.inv.size();
+    if(this.invScroll_8011e0e4 + this.invIndex_8011e0e0 != invCount - 1) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0 = Math.min(5, invCount - 1);
+      this.invScroll_8011e0e4 = invCount - 1 - this.invIndex_8011e0e0;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+
+      if(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item instanceof final Equipment equipment) {
+        this.equipCharIndex = this.FUN_8010a864(equipment);
+      }
     }
   }
 
@@ -890,27 +1021,52 @@ public class ShopScreen extends MenuScreen {
   }
 
   private void menuSelectChar5Select() {
+    playMenuSound(2);
+
     menuStack.pushScreen(new MessageBoxScreen("Buy item?", 2, result -> {
       if(result == MessageBoxResult.YES) {
-        gameState_800babc8.gold_94 -= this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).price;
+        if(canEquip((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex])) {
+          menuStack.pushScreen(new MessageBoxScreen("Equip item?", 2, result1 -> {
+            if(result1 == MessageBoxResult.YES) {
+              final EquipItemResult equipResult = equipItem((Equipment)this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex]);
 
-        menuStack.pushScreen(new MessageBoxScreen("Equip item?", 2, result1 -> {
-          if(result1 == MessageBoxResult.YES && canEquip((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex])) {
-            final EquipItemResult equipResult = equipItem((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item, characterIndices_800bdbb8[this.equipCharIndex]);
-
-            if(equipResult.previousEquipment != null) {
-              giveEquipment(equipResult.previousEquipment);
+              if(equipResult.previousEquipment != null) {
+                if(equipResult.success) {
+                  if(giveEquipment(equipResult.previousEquipment)) {
+                    gameState_800babc8.gold_94 -= this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0).price;
+                  } else {
+                    equipItem(equipResult.previousEquipment, characterIndices_800bdbb8[this.equipCharIndex]);
+                    this.deferAction(() -> menuStack.pushScreen(new MessageBoxScreen("Cannot carry any more", 0, onResult -> {})));
+                  }
+                } else {
+                  equipItem(equipResult.previousEquipment, characterIndices_800bdbb8[this.equipCharIndex]);
+                  this.deferAction(() -> menuStack.pushScreen(new MessageBoxScreen("Failed to equip new item", 0, onResult -> {})));
+                }
+              }
+            } else {
+              this.giveUnequipped(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
             }
-          } else {
-            giveEquipment((Equipment)this.inv.get(this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0).item);
-          }
 
+            this.menuState = MenuState.BUY_4;
+            unloadRenderable(this.charHighlight);
+            this.charHighlight = null;
+          }));
+        } else {
+          this.giveUnequipped(this.inv.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
           this.menuState = MenuState.BUY_4;
           unloadRenderable(this.charHighlight);
           this.charHighlight = null;
-        }));
+        }
       }
     }));
+  }
+
+  private void giveUnequipped(final ShopEntry<? extends InventoryEntry> shopEntry) {
+    if(giveEquipment((Equipment)shopEntry.item)) {
+      gameState_800babc8.gold_94 -= shopEntry.price;
+    } else {
+      this.deferAction(() -> menuStack.pushScreen(new MessageBoxScreen("Cannot carry any more", 0, onResult -> { })));
+    }
   }
 
   private void menuSelectChar5NavigateLeft() {
@@ -918,6 +1074,8 @@ public class ShopScreen extends MenuScreen {
 
     if(this.equipCharIndex > 0) {
       this.equipCharIndex--;
+    } else {
+      this.equipCharIndex = characterCount_8011d7c4 - 1;
     }
 
     this.charHighlight.x_40 = this.FUN_8010a818(this.equipCharIndex);
@@ -928,6 +1086,8 @@ public class ShopScreen extends MenuScreen {
 
     if(this.equipCharIndex < characterCount_8011d7c4 - 1) {
       this.equipCharIndex++;
+    } else {
+      this.equipCharIndex = 0;
     }
 
     this.charHighlight.x_40 = this.FUN_8010a818(this.equipCharIndex);
@@ -940,8 +1100,8 @@ public class ShopScreen extends MenuScreen {
   }
 
   private void menuSell10Select() {
-    final int slot = this.menuScroll_8011e0e4 + this.menuIndex_8011e0e0;
-    if(this.shopType2 != 0 && slot >= gameState_800babc8.items_2e9.size() || this.shopType2 == 0 && (slot >= gameState_800babc8.equipment_1e8.size() || !gameState_800babc8.equipment_1e8.get(slot).canBeDiscarded())) {
+    final int slot = this.invScroll_8011e0e4 + this.invIndex_8011e0e0;
+    if(this.sellType != 0 && slot >= gameState_800babc8.items_2e9.size() || this.sellType == 0 && (slot >= gameState_800babc8.equipment_1e8.size() || !gameState_800babc8.equipment_1e8.get(slot).canBeDiscarded())) {
       playMenuSound(40);
     } else {
       playMenuSound(2);
@@ -951,7 +1111,7 @@ public class ShopScreen extends MenuScreen {
           final InventoryEntry inv;
           final boolean taken;
           final int count;
-          if(this.shopType2 != 0) {
+          if(this.sellType != 0) {
             inv = gameState_800babc8.items_2e9.get(slot);
             taken = takeItem(slot);
             count = gameState_800babc8.items_2e9.size();
@@ -965,13 +1125,29 @@ public class ShopScreen extends MenuScreen {
             final ShopSellPriceEvent event = EVENTS.postEvent(new ShopSellPriceEvent(shopId_8007a3b4, inv, inv.getPrice()));
             addGold(event.price);
 
-            if(this.menuScroll_8011e0e4 > 0 && this.menuScroll_8011e0e4 + 6 > count) {
-              this.menuScroll_8011e0e4--;
+            if(count == 0) {
+              if(this.sellType != 0) {
+                menuStack.pushScreen(new MessageBoxScreen("You have no more\nitems to sell", 0, result1 -> {}));
+              } else {
+                menuStack.pushScreen(new MessageBoxScreen("You have no more\nequipment to sell", 0, result1 -> {}));
+              }
+
+              unloadRenderable(this.selectedMenuOptionRenderablePtr_800bdbe4);
+              this.menuState = MenuState.INIT_2;
+              return;
             }
 
-            if(this.menuIndex_8011e0e0 != 0 && this.menuIndex_8011e0e0 > count - 1) {
-              this.menuIndex_8011e0e0--;
-              this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+            if(this.invScroll_8011e0e4 > 0 && this.invScroll_8011e0e4 + 6 > count) {
+              this.invScroll_8011e0e4--;
+            }
+
+            if(this.invIndex_8011e0e0 != 0 && this.invIndex_8011e0e0 > count - 1) {
+              this.invIndex_8011e0e0--;
+              this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+            }
+
+            if(this.sellType == 0) {
+              this.equipCharIndex = this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
             }
           }
         }
@@ -980,99 +1156,317 @@ public class ShopScreen extends MenuScreen {
   }
 
   private void menuSell10NavigateUp() {
-    playMenuSound(1);
-
-    if(this.menuIndex_8011e0e0 > 0) {
-      this.menuIndex_8011e0e0--;
-    } else if(this.menuScroll_8011e0e4 > 0) {
-      this.menuScroll_8011e0e4--;
-    }
-
-    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
-
-  }
-
-  private void menuSell10NavigateDown() {
-    playMenuSound(1);
-
     final int itemCount;
-    if(this.shopType2 == 0) { // equipment
+    if(this.sellType == 0) { // equipment
       itemCount = gameState_800babc8.equipment_1e8.size();
     } else { // items
       itemCount = gameState_800babc8.items_2e9.size();
     }
 
-    if(this.menuIndex_8011e0e0 < 5) {
-      this.menuIndex_8011e0e0++;
-    } else if((this.menuIndex_8011e0e0 + this.menuScroll_8011e0e4) < itemCount - 1) {
-      this.menuScroll_8011e0e4++;
-    } else {
-      playMenuSound(40);
+    if(this.invIndex_8011e0e0 > 0) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0--;
+    } else if(this.invScroll_8011e0e4 > 0) {
+      playMenuSound(1);
+      this.invScroll_8011e0e4--;
+    } else if(itemCount > 1 && this.allowWrapY) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0 = itemCount > 5 ? 5 : itemCount - 1;
+      this.invScroll_8011e0e4 = itemCount > 6 ? itemCount - 6 : 0;
     }
 
-    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.menuIndex_8011e0e0);
+    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+
+    if(this.sellType == 0) {
+      this.equipCharIndex = this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
+    }
+  }
+
+  private void menuSell10NavigateDown() {
+    final int itemCount;
+    if(this.sellType == 0) { // equipment
+      itemCount = gameState_800babc8.equipment_1e8.size();
+    } else { // items
+      itemCount = gameState_800babc8.items_2e9.size();
+    }
+
+    if(this.invScroll_8011e0e4 + this.invIndex_8011e0e0 < itemCount - 1) {
+      playMenuSound(1);
+      if(this.invIndex_8011e0e0 < 5) {
+        this.invIndex_8011e0e0++;
+      } else {
+        this.invScroll_8011e0e4++;
+      }
+    } else if(itemCount > 1 && this.allowWrapY) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0 = 0;
+      this.invScroll_8011e0e4 = 0;
+    }
+
+    this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+
+    if(this.sellType == 0) {
+      this.equipCharIndex = this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
+    }
+  }
+
+  private void menuSell10NavigateTop() {
+    if(this.invIndex_8011e0e0 != 0) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0 = 0;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+
+      if(this.sellType == 0) {
+        this.equipCharIndex = this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4));
+      }
+    }
+  }
+
+  private void menuSell10NavigateBottom() {
+    final int itemCount;
+    if(this.sellType == 0) { // equipment
+      itemCount = gameState_800babc8.equipment_1e8.size();
+    } else { // items
+      itemCount = gameState_800babc8.items_2e9.size();
+    }
+
+    if(this.invIndex_8011e0e0 != Math.min(5, itemCount - 1)) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0 = Math.min(5, itemCount - 1);
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+
+      if(this.sellType == 0) {
+        this.equipCharIndex = this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
+      }
+    }
+  }
+
+  private void menuSell10NavigatePageUp() {
+    if(this.invScroll_8011e0e4 - 6 >= 0) {
+      playMenuSound(1);
+      this.invScroll_8011e0e4 -= 6;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+    } else if(this.invScroll_8011e0e4 != 0) {
+      playMenuSound(1);
+      this.invScroll_8011e0e4 = 0;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+    }
+
+    if(this.sellType == 0) {
+      this.equipCharIndex = this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
+    }
+  }
+
+  private void menuSell10NavigatePageDown() {
+    final int itemCount;
+    if(this.sellType == 0) { // equipment
+      itemCount = gameState_800babc8.equipment_1e8.size();
+    } else { // items
+      itemCount = gameState_800babc8.items_2e9.size();
+    }
+
+    if((this.invScroll_8011e0e4 + this.invIndex_8011e0e0) + 6 < itemCount - 7) {
+      playMenuSound(1);
+      this.invScroll_8011e0e4 += 6;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+    } else if(itemCount > 6 && this.invScroll_8011e0e4 != itemCount - 6) {
+      playMenuSound(1);
+      this.invScroll_8011e0e4 = itemCount - 6;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+    }
+
+    if(this.sellType == 0) {
+      this.equipCharIndex = this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
+    }
+  }
+
+  private void menuSell10NavigateHome() {
+    if(this.invIndex_8011e0e0 > 0 || this.invScroll_8011e0e4 > 0) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0 = 0;
+      this.invScroll_8011e0e4 = 0;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+
+      if(this.sellType == 0) {
+        this.equipCharIndex = this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
+      }
+    }
+  }
+
+  private void menuSell10NavigateEnd() {
+    final int itemCount;
+    if(this.sellType == 0) { // equipment
+      itemCount = gameState_800babc8.equipment_1e8.size();
+    } else { // items
+      itemCount = gameState_800babc8.items_2e9.size();
+    }
+
+    if(this.invScroll_8011e0e4 + this.invIndex_8011e0e0 != itemCount - 1) {
+      playMenuSound(1);
+      this.invIndex_8011e0e0 = Math.min(5, itemCount - 1);
+      this.invScroll_8011e0e4 = itemCount - 1 - this.invIndex_8011e0e0;
+      this.selectedMenuOptionRenderablePtr_800bdbe4.y_44 = this.menuEntryY(this.invIndex_8011e0e0);
+
+      if(this.sellType == 0) {
+        this.equipCharIndex = this.FUN_8010a864(gameState_800babc8.equipment_1e8.get(this.invScroll_8011e0e4 + this.invIndex_8011e0e0));
+      }
+    }
   }
 
   @Override
-  public InputPropagation pressedThisFrame(final InputAction inputAction) {
-    if(super.pressedThisFrame(inputAction) == InputPropagation.HANDLED) {
+  public InputPropagation inputActionPressed(final InputAction action, final boolean repeat) {
+    if(super.inputActionPressed(action, repeat) == InputPropagation.HANDLED) {
       return InputPropagation.HANDLED;
     }
 
     switch(this.menuState) {
       case RENDER_3 -> {
-        if(inputAction == InputAction.BUTTON_EAST) {
+        if(action == INPUT_ACTION_MENU_UP.get()) {
+          this.menuMainShopRender3NavigateUp();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_DOWN.get()) {
+          this.menuMainShopRender3NavigateDown();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_BACK.get() && !repeat) {
           this.menuMainShopRender3Escape();
           return InputPropagation.HANDLED;
         }
 
-        if(inputAction == InputAction.BUTTON_SOUTH) {
+        if(action == INPUT_ACTION_MENU_CONFIRM.get() && !repeat) {
           this.menuMainShopRender3Select();
           return InputPropagation.HANDLED;
         }
       }
 
       case BUY_4 -> {
-        if(inputAction == InputAction.BUTTON_EAST) {
+        if(action == INPUT_ACTION_MENU_HOME.get()) {
+          this.menuBuy4NavigateHome();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_END.get()) {
+          this.menuBuy4NavigateEnd();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_PAGE_UP.get()) {
+          this.menuBuy4NavigatePageUp();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_PAGE_DOWN.get()) {
+          this.menuBuy4NavigatePageDown();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_TOP.get()) {
+          this.menuBuy4NavigateTop();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_BOTTOM.get()) {
+          this.menuBuy4NavigateBottom();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_UP.get()) {
+          this.menuBuy4NavigateUp();
+          this.allowWrapY = false;
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_DOWN.get()) {
+          this.menuBuy4NavigateDown();
+          this.allowWrapY = false;
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_BACK.get() && !repeat) {
           this.menuBuy4Escape();
           return InputPropagation.HANDLED;
         }
 
-        if(inputAction == InputAction.BUTTON_SOUTH) {
+        if(action == INPUT_ACTION_MENU_CONFIRM.get() && !repeat) {
           this.menuBuy4Select();
           return InputPropagation.HANDLED;
         }
       }
 
       case BUY_SELECT_CHAR_5 -> {
-        if(inputAction == InputAction.DPAD_LEFT || inputAction == InputAction.JOYSTICK_LEFT_BUTTON_LEFT) {
+        if(action == INPUT_ACTION_MENU_LEFT.get()) {
           this.menuSelectChar5NavigateLeft();
           return InputPropagation.HANDLED;
         }
 
-        if(inputAction == InputAction.DPAD_RIGHT || inputAction == InputAction.JOYSTICK_LEFT_BUTTON_RIGHT) {
+        if(action == INPUT_ACTION_MENU_RIGHT.get()) {
           this.menuSelectChar5NavigateRight();
           return InputPropagation.HANDLED;
         }
 
-        if(inputAction == InputAction.BUTTON_EAST) {
+        if(action == INPUT_ACTION_MENU_BACK.get() && !repeat) {
           this.menuSelectChar5Escape();
           return InputPropagation.HANDLED;
         }
 
-        if(inputAction == InputAction.BUTTON_SOUTH) {
+        if(action == INPUT_ACTION_MENU_CONFIRM.get() && !repeat) {
           this.menuSelectChar5Select();
           return InputPropagation.HANDLED;
         }
       }
 
       case SELL_10 -> {
-        if(inputAction == InputAction.BUTTON_EAST) {
+        if(action == INPUT_ACTION_MENU_HOME.get()) {
+          this.menuSell10NavigateHome();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_END.get()) {
+          this.menuSell10NavigateEnd();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_PAGE_UP.get()) {
+          this.menuSell10NavigatePageUp();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_PAGE_DOWN.get()) {
+          this.menuSell10NavigatePageDown();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_TOP.get()) {
+          this.menuSell10NavigateTop();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_BOTTOM.get()) {
+          this.menuSell10NavigateBottom();
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_UP.get()) {
+          this.menuSell10NavigateUp();
+          this.allowWrapY = false;
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_DOWN.get()) {
+          this.menuSell10NavigateDown();
+          this.allowWrapY = false;
+          return InputPropagation.HANDLED;
+        }
+
+        if(action == INPUT_ACTION_MENU_BACK.get() && !repeat) {
           this.menuSell10Escape();
           return InputPropagation.HANDLED;
         }
 
-        if(inputAction == InputAction.BUTTON_SOUTH) {
+        if(action == INPUT_ACTION_MENU_CONFIRM.get() && !repeat) {
           this.menuSell10Select();
           return InputPropagation.HANDLED;
         }
@@ -1083,47 +1477,14 @@ public class ShopScreen extends MenuScreen {
   }
 
   @Override
-  public InputPropagation pressedWithRepeatPulse(final InputAction inputAction) {
-    if(super.pressedWithRepeatPulse(inputAction) == InputPropagation.HANDLED) {
+  public InputPropagation inputActionReleased(final InputAction action) {
+    if(super.inputActionReleased(action) == InputPropagation.HANDLED) {
       return InputPropagation.HANDLED;
     }
 
-    switch(this.menuState) {
-      case RENDER_3 -> {
-        if(inputAction == InputAction.DPAD_UP || inputAction == InputAction.JOYSTICK_LEFT_BUTTON_UP) {
-          this.menuMainShopRender3NavigateUp();
-          return InputPropagation.HANDLED;
-        }
-
-        if(inputAction == InputAction.DPAD_DOWN || inputAction == InputAction.JOYSTICK_LEFT_BUTTON_DOWN) {
-          this.menuMainShopRender3NavigateDown();
-          return InputPropagation.HANDLED;
-        }
-      }
-
-      case BUY_4 -> {
-        if(inputAction == InputAction.DPAD_UP || inputAction == InputAction.JOYSTICK_LEFT_BUTTON_UP) {
-          this.menuBuy4NavigateUp();
-          return InputPropagation.HANDLED;
-        }
-
-        if(inputAction == InputAction.DPAD_DOWN || inputAction == InputAction.JOYSTICK_LEFT_BUTTON_DOWN) {
-          this.menuBuy4NavigateDown();
-          return InputPropagation.HANDLED;
-        }
-      }
-
-      case SELL_10 -> {
-        if(inputAction == InputAction.DPAD_UP || inputAction == InputAction.JOYSTICK_LEFT_BUTTON_UP) {
-          this.menuSell10NavigateUp();
-          return InputPropagation.HANDLED;
-        }
-
-        if(inputAction == InputAction.DPAD_DOWN || inputAction == InputAction.JOYSTICK_LEFT_BUTTON_DOWN) {
-          this.menuSell10NavigateDown();
-          return InputPropagation.HANDLED;
-        }
-      }
+    if(action == INPUT_ACTION_MENU_UP.get() || action == INPUT_ACTION_MENU_DOWN.get()) {
+      this.allowWrapY = true;
+      return InputPropagation.HANDLED;
     }
 
     return InputPropagation.PROPAGATE;
@@ -1131,7 +1492,7 @@ public class ShopScreen extends MenuScreen {
 
   public static class ShopEntry<T extends InventoryEntry> {
     public final T item;
-    public final int price;
+    public int price;
 
     public ShopEntry(final T item, final int price) {
       this.item = item;
